--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   custom_accordion: ^1.0.0
   flutter:
     sdk: flutter
+  flutter_onboarding_slider: ^1.0.11
   rounded_loading_button: ^2.1.0
   simple_animated_button: ^0.0.9
 
