--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_onboarding_slider: ^1.0.11
+  localstorage: ^4.0.1+4
   rflutter_alert: ^2.0.7
   rounded_loading_button: ^2.1.0
   simple_animated_button: ^0.0.9
