--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   custom_accordion: ^1.0.0
+  decimal: ^2.3.3
   flutter:
     sdk: flutter
   flutter_onboarding_slider: ^1.0.11
